...
import ch.eureka.eurekapp.model.data.meeting.MeetingFormat
import ch.eureka.eurekapp.ui.components.BackButton
import ch.eureka.eurekapp.ui.components.EurekaTopBar

/** Test tags for the create meeting proposal for datetime/format screen. */
object CreateDateTimeFormatMeetingProposalScreenTestTags {
  const val CREATE_MEETING_PROPOSAL_SCREEN_TITLE = "CreateMeetingProposalScreenTitle"
  const val CREATE_MEETING_PROPOSAL_SCREEN_DESCRIPTION = "CreateMeetingProposalScreenDescription"
  const val ERROR_MSG = "ErrorMsg"
  const val INPUT_MEETING_DATE = "InputMeetingDate"
  const val INPUT_MEETING_TIME = "InputMeetingTime"
  const val INPUT_FORMAT = "InputFormat"
  const val CREATE_MEETING_PROPOSAL_BUTTON = "CreateMeetingProposalButton"
}

/**
 * Main composable for the screen that enables users to create a new meeting proposal that proposes
 * a new datetime and format for a meeting.
 *
...
