...
 */
enum class MeetingFormat(val description: String) : StringSerializableEnum {
  /** The meeting is in-person. */
  IN_PERSON("In person"),

  /** Meeting is virtual (ex: Google Meet, Zoom, etc). */
  VIRTUAL("Virtual")
}

